package org.visualJson;

public interface IconFactory {
    public Icon createIcon(String name);
}
