package org.visualJson;

public interface View {
    public void show();
}
