package org.visualJson;

public interface ViewFactory {
    public View createView(String filePath,String iconFamilyOption);
}
